--- a/index.html
+++ b/index.html
@@ -197,6 +197,30 @@
         </p>
       </div>
       <ul>
+
+        <li>
+          <div class="image">
+            <img src="assets/youtube.com.png" alt="youtube" />
+          </div>
+          <div class="projects__info">
+            <h3 class="tertiary-title">
+              Clone do Youtube com React, Typescript e API do Youtube
+            </h3>
+            <p>
+              Interface do youtube com React e Typescript <br>
+                <strong>Conhecimentos usados: </strong> <br>
+                - React (useState, useEffect, ContextAPI, useContext, React Router DOM) <br>
+                - Typescript <br>
+                - Axios <br>
+                - Styled Components <br>
+                - Node Js/Express
+
+            </p>
+            <a href="https://youtube-page-rafael-kappa.vercel.app/" target="_blank">Ver projeto &rarr;</a>
+          </div>
+        </li>
+
+
         <li>
           <div class="image">
             <img src="assets/miniblog.png" alt="Gerenciamento de tarefas" />
@@ -236,7 +260,7 @@
 
         <li class="projects__reversed-list">
           <div class="image">
-            <img src="assets/movies.png" class="img-projetos" alt="pokedex" />
+            <img src="assets/movies.png" class="img-projetos" alt="filmes" />
           </div>
           <div class="projects__info">
             <h3 class="tertiary-title">
@@ -250,21 +274,6 @@
           </div>
         </li>
 
-
-        <li>
-          <div class="image">
-            <img src="assets/to-do.png" alt="delivery" />
-          </div>
-          <div class="projects__info">
-            <h3 class="tertiary-title">
-              Sistema To-Do feito em React com Typescript
-            </h3>
-            <p>
-              Sistema de lista de tarefas com funcionalidades para inserir, editar e excluir tarefas.
-            </p>
-            <a href="https://to-do-react-typescript-wheat.vercel.app/" target="_blank">Ver projeto &rarr;</a>
-          </div>
-        </li>
       </ul>
     </section>
 
